[gd_scene load_steps=3 format=3 uid="uid://2ya8jrwfnyam"]

[ext_resource type="Script" path="res://Menu/escape.gd" id="1_01aln"]
[ext_resource type="Script" path="res://spellbook.gd" id="2_f6lrg"]

[node name="Escape" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01aln")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.75
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("2_f6lrg")

[node name="Label" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "asdfasd
faaaaaaaaaaaaaaaaaaaa"

[node name="Label2" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "asdfasdfasdf"

[node name="Label3" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "asdfasdfa"

[node name="Label4" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "asdfasdfasdf"

[node name="Label5" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "aasdfasdfasdf"

[node name="Label7" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label8" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
